--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="my-intro">
         <h1>My Favorite Class</h1>
         
-        <h2>Internet Art!</h2>
+        <h2>Internet Art</h2>
 
         <p>
             I love learning about <b>Internet Art</b> online! <span>It's fascinating, interesting, and full of surprises.</span> <br>
@@ -25,7 +25,7 @@
         <img class="doggo1" src="https://s.yimg.com/ny/api/res/1.2/iy_nyGgbsFc_D4A8l_lWfg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTcyMDtoPTQ4MA--/https://media.zenfs.com/en-US/homerun/news.mashable/608422137858f23f4579900fc9f11a97" alt="happy shiba">
         <img class="doggo2" src="https://s.yimg.com/ny/api/res/1.2/iy_nyGgbsFc_D4A8l_lWfg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTcyMDtoPTQ4MA--/https://media.zenfs.com/en-US/homerun/news.mashable/608422137858f23f4579900fc9f11a97" alt="happy shiba">
 
-        <a href="">More text please</a>
+        <a href="">More text</a>
 
         <p>
             <a href="https://www.google.com/search?q=happy+shiba&sca_esv=49c9fbd1deebda4c&sxsrf=AHTn8zpDqkxDovsQxHnpeRlQuo8AliDs-Q:1744063821456&source=hp&biw=770&bih=786&ei=TU30Z4K_GdD60PEP-v-2yQE&iflsig=ACkRmUkAAAAAZ_RbXQfNjAQsEwSN2O1xVTa4C4aDTkNK&ved=0ahUKEwjCmaqE-MaMAxVQPTQIHfq_LRkQ4dUDCBc&uact=5&oq=happy+shiba&gs_lp=EgNpbWciC2hhcHB5IHNoaWJhMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBxAAGIAEGAoyBRAAGIAEMgUQABiABDIFEAAYgARI_wlQAFj3CHAAeACQAQCYATqgAZ0EqgECMTG4AQPIAQD4AQGKAgtnd3Mtd2l6LWltZ5gCC6ACvQTCAgsQABiABBixAxiDAcICCBAAGIAEGLEDwgIOEAAYgAQYsQMYgwEYigWYAwCSBwIxMaAH1zayBwIxMbgHvQQ&sclient=img&udm=2#vhid=w6CYPEMXcoNrCM&vssid=mosaic" target="_blank">Search for shibas</a>
